[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/mana-gem-bw.png" type="Texture" id=1]
[ext_resource path="res://src/hud/mana_gems.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -40.0

[node name="gem0" type="Sprite" parent="CenterContainer"]
position = Vector2( -48, 0 )
texture = ExtResource( 1 )

[node name="gem1" type="Sprite" parent="CenterContainer"]
position = Vector2( -16, 0 )
texture = ExtResource( 1 )

[node name="gem2" type="Sprite" parent="CenterContainer"]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="gem3" type="Sprite" parent="CenterContainer"]
position = Vector2( 48, 0 )
texture = ExtResource( 1 )
